Add getUserProfile and do some refactoring
